# MyPlayer

./: .gitignore  AUTHORS  Makefile.am  README.md  configure.ac
doc/: New-Functionnalities-for-a-better-world.txt  TODO.txt
include/: common.h  myp_plugin.h  myp_ui.h  print.h
plugins/plugin_gstreamer/: Makefile.am  gstreamer.c
src/: Makefile.am  context.c  context.h  main.c  myp_plugin.h  playlist.c  playlist.h  print.c  print.h
ui/gtk/: Makefile.am  gtk.c
